Tests kinda mostly working